<resources>
    <string name="app_name">My Application</string>
    <string name="commencer">commencer</string>
    <string name="texteAccueil">textAccueil</string>
    <string name="NextButton">Poursuivre</string>
    <string name="WelcomeText">Bienvenue au Quiz!</string>
    <string name="HomeMainText">Poursuivre en tant que</string>
    <string name="image">none</string>
    <string name="AdminButton">Administrateur</string>
    <string name="UserButton">Utilisateur</string>
    <string name="UserWelcomeText">Bienvenue Utilisateur</string>
    <string name="listQuizCard">Lister les Quiz Collectifs</string>
    <string name="CollectiveQuizPageTitle">List des Quiz Collectifs</string>
    <string name="ListCollectiveQuizButton">Lister les Quiz Collectifs</string>
    <string name="cardTitle">TextView</string>
    <string name="cardDescription">TextView</string>
    <string name="CardImage">none</string>
    <string name="QuizViewGreetings">Jouez a ce Quizz !</string>
    <string name="PlayQuizzButton">Jouez Maintenant!</string>
    <string name="QuizTitleText">TextView</string>
    <string name="PremiereQuestion">TextView</string>
    <string name="choix1">choix Un</string>
    <string name="choix2">Choix deux</string>
    <string name="Choix3">choix trois</string>
    <string name="choisissez_une_des_reponses">Choisissez Une des reponses</string>
    <string name="nextQst">Suivant</string>
    <string name="MenuText">Menue</string>
    <string name="menu_utilisateur">Menu Utilisateur</string>
    <string name="frontpageimg">TODO</string>
    <string name="QuizImageFrontView">TODO</string>
    <string name="answerOne">TextView</string>
    <string name="answerTwo">TextView</string>
    <string name="answerThree">TextView</string>
    <string name="adminWelcomeText">TextView</string>
    <string name="bienvenue_admin">Bienvenue Admin!</string>
    <string name="gerer_un_dossier_de_suivis">Gerer un dossier de suivis</string>
    <string name="textview">Resultats</string>
    <string name="folder_title">Folder Title</string>
    <string name="reslutats">Reslutats :</string>
    <string name="resultstext1">TextView</string>
    <string name="resultstext2">TextView</string>
    <string name="resultstext4">TextView</string>
    <string name="resultstext3">TextView</string>
    <string name="vue_d_ensemble">Vue d\'ensemble</string>
    <string name="results_details">Resultats détaillé</string>
    <string name="detailsresults">TextView</string>
    <string name="resultats_d_taill">Resultats Détaillé</string>
    <string name="ConsultAnswers">Consulter les reponses jutse ou fausse d\'un resident pour un quizz donné</string>
    <string name="consulter">Consulter</string>
    <string name="consultAnswersText">TextView</string>
    <string name="consulter_les_reponses_jutse_ou_fausse_d_un_resident_pour_un_quizz_donn">Consulter les reponses jutse ou fausse d\'un resident pour un quizz donné</string>
    <string name="radiobutton">RadioButton</string>
    <string name="radiobutton1">RadioButton</string>
    <string name="radiobutton2">RadioButton</string>
    <string name="userAnswersTitle">Les reponses de _ pour le quiz _</string>
    <string name="graphtext">Niveau de tremblements moyen du resident</string>
    <string name="button">Activer Adaptation</string>
    <string name="ajouter_un_quiz_personnalise">Ajouter un quiz personnalise</string>
    <string name="lister_mes_quiz_personnels">Lister mes Quiz Personnels</string>
    <string name="bienvenue_au_mini_jeu">Bienvenue au mini jeu</string>
    <string name="lancez_le_mini_jeu_memoriel">Lancez le mini jeu memoriel!</string>
    <string name="quittez_le_mini_jeu">Quittez le mini jeu</string>
    <string name="augmenter_le_texte">Augmenter le texte</string>
    <string name="retrouvez_les_pair_dimages">Retrouvez les pair d\'images !</string>
    <string name="retrouvez_les_pair_dimage">Retrouvez les pair dimages</string>
    <string name="text_view_countdown">TextView</string>
    <string name="cr_ation_d_un_quiz_personnalis">Création d\'un quiz Personnalisé!</string>
    <string name="crivez_dans_les_champs_appropri_s">Écrivez dans les champs appropriés</string>
    <string name="rentrez_un_choix_de_reponse">Rentrez un choix de réponse</string>
    <string name="rentrer_la_question_ici">Rentrer la question ici</string>
    <string name="creer">Creer</string>
    <string name="ajouter_une_video">Ajouter une video</string>
    <string name="rentez_la_bonne_reponse_ici">Rentez la bonne reponse ici</string>
    <string name="ajouter_un_fichier_audio">Ajouter un fichier Audio</string>
    <string name="ajouter_une_image">Ajouter une image</string>
    <string name="entr_un_choix_de_reponse">Entré un choix de réponse</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="xx">xx</string>
    <string name="none">none</string>
    <string name="upload">upload</string>
    <string name="datavisu">Visualisation des Donées</string>
    <color name="CustomBackgroundColor">#1f1f1f</color>
</resources>