<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/CustomBackgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/WelcomeText"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="165dp"
        android:layout_height="121dp"
        android:layout_marginTop="236dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_assignment_ind_24px" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/HomeMainText"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="391dp"
        android:layout_height="92dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/AsAdmin"
            android:layout_width="168dp"
            android:layout_height="38dp"
            android:background="@color/white"
            android:text="@string/AdminButton" />

        <Space
            android:layout_width="61dp"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/AsUser"
            android:layout_width="171dp"
            android:layout_height="33dp"
            android:background="@color/white"
            android:text="@string/UserButton" />
    </TableRow>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="278dp"
        android:layout_height="227dp"
        android:layout_marginBottom="76dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/quizbg"
        android:contentDescription="@string/frontpageimg" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardNext"
        android:layout_width="758dp"
        android:layout_height="92dp"
        app:cardBackgroundColor="#11FF38"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:layout_constraintVertical_bias="0.342">

        <Button
            android:id="@+id/NextButton"
            android:layout_width="745dp"
            android:layout_height="80dp"
            android:layout_marginBottom="68dp"
            android:background="#27FF2C"
            android:ellipsize="none"
            android:text="@string/NextButton"
            android:textColor="#252525"
            android:textSize="30sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>